# pyside-demo

./: .gitignore  pyproject.toml  pyside_demo.spec
.github/workflows/: build.yml
src/pyside_demo/: __main__.py  main_widget.py
