[project]
name = "pyside-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "Kamil Malinowski",email = "malinowskikam96@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pyside6 (>=6.9.1,<7.0.0)",
    "pyinstaller (>=6.15.0,<7.0.0)",
]

[tool.poetry]
packages = [{include = "pyside_demo", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
